gateway/gateway-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: its-gateway
spec:
  selector:
    matchLabels:
      app: its-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: its-gateway
    spec:
      containers:
      - name: its-gateway
        image: rajendransurya/its-gateway:latest   #for local
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          protocol: TCP
