gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: its-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: its-gateway
                port:
                  number: 9000

---
#    apiVersion: v1
#    kind: Service
#    metadata:
#      name: its-gateway
#    spec:
#      selector:
#        app: its-gateway
#      type: ClusterIP
#      ports:
#        - port: 9000
apiVersion: v1
kind: Service
metadata:
  name: its-gateway
spec:
  selector:
    app: its-gateway
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
